# llm-fine-tuning

./: .gitignore  Dockerfile  LICENSE  README.md  RUN_INSTRUCTIONS.md  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh  run_pipeline.py  setup.py  test_api.py
.github/workflows/: ci-cd.yml
scripts/: debug_pipeline.py  quick_test.py  run_pipeline.py  switch_components.py  test_complete_pipeline.py  test_pipeline_local.py
src/llm_fine_tuning/: __init__.py
src/llm_fine_tuning/config/: __init__.py  settings.py
src/llm_fine_tuning/data/: __init__.py
src/llm_fine_tuning/data/collection/: __init__.py  pdf_extractor.py  web_scraper.py
src/llm_fine_tuning/data/processing/: __init__.py  augmenter.py  cleaner.py  splitter.py  tokenizer.py
src/llm_fine_tuning/deployment/: __init__.py  api_server.py
src/llm_fine_tuning/evaluation/: __init__.py  benchmark_generator.py  evaluator.py  performance_monitor.py
src/llm_fine_tuning/models/: __init__.py  fine_tuner.py
src/llm_fine_tuning/pipeline/: __init__.py  main.py
src/llm_fine_tuning/utils/: logger.py
tests/: test_imports.py  test_pipeline.py
