[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-fine-tuning"
version = "1.0.0"
description = "A comprehensive pipeline for fine-tuning small language models for domain-specific tasks"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LLM Fine-tuning Team", email = "team@example.com"}
]
maintainers = [
    {name = "LLM Fine-tuning Team", email = "team@example.com"}
]
keywords = ["machine-learning", "nlp", "fine-tuning", "llm", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "crawl4ai",
    "docling",
    "mlflow",
    "transformers",
    "peft",
    "zenml",
    "fastapi",
    "uvicorn",
    "pandas",
    "scikit-learn",
    "torch",
    "evaluate",
    "rouge-score",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "pre-commit",
    "psutil",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "pre-commit>=2.20.0",
]

[project.scripts]
llm-fine-tuning = "llm_fine_tuning.pipeline.main:main"

[project.urls]
Homepage = "https://github.com/your-username/llm-fine-tuning"
Repository = "https://github.com/your-username/llm-fine-tuning"
Documentation = "https://github.com/your-username/llm-fine-tuning#readme"
"Bug Tracker" = "https://github.com/your-username/llm-fine-tuning/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/llm_fine_tuning",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
] 